Communicate with a backend via S3

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,5 @@
 {
   "editor.formatOnSave": true,
-  "javascript.format.enable": false,
   "editor.tabSize": 2,
   "files.eol": "\n",
   "search.exclude": {
@@ -8,6 +7,7 @@
     "**/.serverless": true,
     "**/.webpack": true
   },
-  "tslint.enable": true,
-  "tslint.autoFixOnSave": true
+  "editor.codeActionsOnSave": {
+    "source.fixAll.tslint": true
+  }
 }
