--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,9 @@
 {
   "compilerOptions": {
     "sourceMap": true,
-    "lib": ["es5", "es6", "es2015", "es2016", "es2017", "es2018"],
+    "lib": ["esnext"],
     "forceConsistentCasingInFileNames": true,
+    "esModuleInterop": true,
     "noImplicitReturns": true,
     "noImplicitThis": true,
     "noImplicitAny": true,
